--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command   = "npm install && cd client && npm ci && npm run build"
-  publish   = "client/dist"
-  functions = "server/functions"
+  base = "client"
+  command = "npm run build"
+  publish = "dist"
 
-[context.production.environment]
-  NODE_ENV = "production"
+[functions]
+  directory = "../server/functions"
