--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "client"
-  command = "npm run build"
-  publish = "dist"
+  command   = "npm install && cd client && npm ci && npm run build"
+  publish   = "client/dist"
+  functions = "server/functions"
 
-[functions]
-  directory = "../server/functions"
+[context.production.environment]
+  NODE_ENV = "production"
