--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
 [build]
-  base    = "client"
-  command = "npm ci --include=dev && npm run build"
-  publish = "client/dist"
+  command   = "npm run build"
+  publish   = "client/dist"
+  functions = "netlify/functions"
 
-[functions]
-  directory = "server/functions"
+[[redirects]]
+  from    = "/api/*"
+  to      = "/.netlify/functions/api/:splat"
+  status  = 200
+  force   = true
