--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev:client": "cd client && vite",                                 
-    "dev:server": "NODE_ENV=development tsx server/index.ts",         
-    "dev": "npm-run-all --parallel dev:client dev:server",             
+    "dev:client": "cd client && vite",
+    "dev:server": "NODE_ENV=development tsx server/index.ts",
+    "dev": "npm-run-all --parallel dev:client dev:server",
     "build:client": "cd client && npm ci && npm run build",
     "build:server": "esbuild server/index.ts \\ --platform=node --packages=external --bundle --format=esm \\ --outdir=dist",
-    "build": "npm-run-all build:client build:server",                  
-    "preview": "cd client && vite preview",                            
-    "start": "NODE_ENV=production node dist/index.js",                 
-    "check": "tsc --noEmit",                                           
-    "db:push": "drizzle-kit push"                                     
+    "build": "npm-run-all build:client build:server",
+    "preview": "cd client && vite preview",
+    "start": "NODE_ENV=production node dist/index.js",
+    "check": "tsc --noEmit",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
+    "@netlify/functions": "^3.1.8",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
