--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.4",
     "typescript": "5.6.3",
+    "npm-run-all": "^4.1.5",
     "vite": "^6.3.5"
   },
   "optionalDependencies": {
