--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
      "build:server": "esbuild server/index.ts --platform=node --bundle --format=esm --outdir=dist",
     "build": "npm-run-all build:client build:server",
     "preview": "cd client && vite preview",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "NODE_ENV=production node client/dist/index.js",
     "check": "tsc --noEmit",
     "db:push": "drizzle-kit push"
   },
