--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:server": "NODE_ENV=development tsx server/index.ts",
     "dev": "npm-run-all --parallel dev:client dev:server",
     "build:client": "cd client && npm ci && npm run build",
-     "build:server": "esbuild server/index.ts --platform=node --bundle --format=esm --outdir=dist",
+    "build:server": "esbuild server/index.ts --platform=node --bundle --format=esm --outdir=dist",
     "build": "npm-run-all build:client build:server",
     "preview": "cd client && vite preview",
     "start": "NODE_ENV=production node dist/index.js",
@@ -93,7 +93,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
+    "@types/node": "^20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
@@ -104,11 +104,11 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.1",
     "esbuild": "^0.25.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.4",
     "typescript": "5.6.3",
-    "npm-run-all": "^4.1.5",
     "vite": "^6.3.5"
   },
   "optionalDependencies": {
