--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
     "baseUrl": ".",
+    "outDir": "./dist",
     "types": ["node", "vite/client"],
     "paths": {
       "@/*": ["./client/src/*"],
