--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "build": "npm run build --workspace client && npm run build --workspace server",
+    "start": "node server/dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
