--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run build --workspace client && npm run build --workspace server",
     "start": "node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "postbuild": "xcopy /E /I /Y client\\dist server\\public"
   },
   "workspaces": [
     "client",
