--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "postbuild": "xcopy /E /I /Y client\\dist server\\public"
+    "postbuild": "cp -r client/dist/* server/public/"
   },
   "workspaces": [
     "client",
