--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "npm run build --workspace ../client && mkdir -p public && cp -rf ../client/dist/* public/ && tsc",
+    "build": "npm run build --workspace ../client && tsc && mkdir -p dist/server/public && cp -rf ../client/dist/* dist/server/public/",
     "start": "node dist/server/index.js"
   },
   "dependencies": {
